# app/controllers/staff_controller.rb
@@ -2,10 +2,11 @@
 # so User model itself using as staff
 class StaffController < ApplicationController
   before_action :authenticate_user!
-  before_action :set_clinic, except: %i[phone_types index show]
+  before_action :set_clinic, only: %i[create supervisor_list]
 
   def index
-    @staff = User.joins(:role).where('role.name': ['bcba','rbt','billing']).order(:first_name).paginate(page: params[:page])
+    @staff = User.joins(:role).by_staff_roles
+    @staff = @staff.order(:first_name).paginate(page: params[:page])
   end
 
   def show
@@ -18,7 +19,9 @@ class StaffController < ApplicationController
   end
   
   def create
-    @staff = @clinic.staff.create(create_params).reload
+    @staff = @clinic.staff.new(create_params)
+    @staff.role = Role.bcba.first
+    @staff.save
   end
 
   def phone_types
@@ -36,19 +39,18 @@ class StaffController < ApplicationController
   end
 
   def staff_params
-    params.permit(:first_name, :last_name, :status, :terminated_at, :email, :password,
-                  :password_confirmation, :supervisor_id, :clinic_id,address_attributes: 
-                  %i[line1 line2 line3 zipcode city state country addressable_type addressable_id],
-                  phone_numbers_attributes: %i[phone_type number])
+    params.permit(:first_name, :last_name, :status, :terminated_at, :email, :supervisor_id, 
+                  :clinic_id,address_attributes: %i[line1 line2 line3 zipcode city state country 
+                  addressable_type addressable_id], phone_numbers_attributes: 
+                  %i[phone_type number])
   end
 
   def create_params
     params.permit(:first_name, :last_name, :status, :terminated_at, :email, :password,
-                 :service_provider, :password_confirmation, :supervisor_id, :clinic_id, 
-                 user_role_attributes: %i[role_id], address_attributes: 
-                 %i[line1 line2 line3 zipcode city state country addressable_type addressable_id], 
-                 phone_numbers_attributes: %i[phone_type number], rbt_supervision_attributes: 
-                 %i[status start_date end_date], services_attributes: %i[name status display_code])
+                  :service_provider, :password_confirmation, :supervisor_id, :clinic_id, address_attributes: 
+                  %i[line1 line2 line3 zipcode city state country addressable_type addressable_id], 
+                  phone_numbers_attributes: %i[phone_type number], rbt_supervision_attributes: 
+                  %i[status start_date end_date], services_attributes: %i[name status display_code])
   end
   # end of private
 end
